--- a/pom.xml
+++ b/pom.xml
@@ -223,7 +223,10 @@
 					</mappings>
 					
 					<postinstallScriptlet>
-						<script>sudo conda install -y --file /application/dependencies/package.list</script>
+						<script>
+							sudo conda install -y --file /application/dependencies/package.list; \
+							sudo update-alternatives --set java /usr/lib/jvm/jre-1.7.0-openjdk.x86_64/bin/java
+						</script>
 					</postinstallScriptlet>
 
 					<provides>
