--- a/pom.xml
+++ b/pom.xml
@@ -105,7 +105,6 @@
 							<target>
 								<chmod dir="/application" includes="**/run" perm="755" />
 								<chmod file="/application/application.xml" perm="664"/>
-								<chmod file="/application/job_template_2/bin/placemark_counter.py" perm="777"/>
 							</target>
 						</configuration>
 						<goals>
@@ -206,6 +205,7 @@
 									<location>${basedir}/src/main/app-resources</location>
 									<includes>
 										<include>**/run</include>
+										<include>**/*.py</include>
 									</includes>
 								</source>
 							</sources>
